--- a/src/app/utils/structure-field/structure-field.component.html
+++ b/src/app/utils/structure-field/structure-field.component.html
@@ -127,7 +127,7 @@
     *ngIf="edit.status && canAdd && type!=='internal'">
     <span [ngStyle]="style" class="d-flex align-items-center" id="schemaFieldObjectAddField">
         <span class="dsi dsi-plus-circle fa-xs mr-1 text-primary"></span>
-        <span class="text">Add</span>
+        <span class="text-primary">Add</span>
     </span>
 </div>
 
