--- a/src/app/home/b2b-flows/b2b-flows.component.html
+++ b/src/app/home/b2b-flows/b2b-flows.component.html
@@ -155,7 +155,7 @@
                 </ng-container>
             </div>
             <label for="name" class="font-13 text-secondary">
-                <span class="text">Type</span>
+                <span class="text">Input Node</span>
                 <sup class="text-danger font-normal" ngbTooltip="Mandatory field">*</sup>
             </label>
             <div class="name-wrapper position-relative">
